--- a/C#/vs2019/source/repos1/20191121slnFileUpload/prjFileUpload/prjFileUpload.csproj
+++ b/C#/vs2019/source/repos1/20191121slnFileUpload/prjFileUpload/prjFileUpload.csproj
@@ -92,6 +92,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="APP_Class\lyen.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\FileUploadController.cs" />
     <Compile Include="Controllers\MultiFileController.cs" />
